--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sahuaro Catering</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="header">
-
+        <div class="logo">
+            Sahuaro Catering
+        </div>
+        <div class="nav">
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </div>
 
     <div id="hero">
-
+        <h1>Sahuaro Catering</h1>
+        <p>
+            Providing food and drinks for events in Arizona for years
+        </p>
+        <a href="contact.html" id="cta">Contact Us</a>
     </div>
 
     <div id="services">
