--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
     </div>
 
     <div id="services">
+        <div class="card">
+            <h3>Catering</h3>
+            <p>Providing food and drinks for events</p>
+            <a class="button" href="services.html">Schedule</a>
+        </div>
 
+        <div class="card">
+            <h3>Decorating</h3>
+            <p>Arrange and set up decorations</p>
+            <a class="button" href="services.html">Schedule</a>
+        </div>
+
+        <div class="card">
+            <h3>Managing</h3>
+            <p>Help with scheduling and other responsibilites</p>
+            <a class="button" href="services.html">Learn More</a>
+        </div>
     </div>
 
     <div id="testimonials">
