--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>
             Providing food and drinks for events in Arizona for years
         </p>
-        <a href="contact.html" id="cta">Contact Us</a>
+        <a href="contact.html" id="cta" class="button">Contact Us</a>
     </div>
 
     <div id="services">
@@ -47,7 +47,14 @@
     </div>
 
     <div id="testimonials">
-
+        <div class="card">
+            <p class="quote">Made delicious food for my wedding!</p>
+            <p class="attribution">Betty</p>
+        </div>
+        <div class="card">
+            <p class="quote">Defeated Green Goblin and saved my birthday party!</p>
+            <p class="attribution">August</p>
+        </div>
     </div>
 
     <div id="about">
